# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-jinja-module"
version = "0.1.1"
authors = ["ASIMOV Protocol <support@asimov.so>"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module for prompt templating using the Jinja templating language."
#documentation = "https://docs.rs/asimov-jinja-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-jinja-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = [
    "command-line-utilities",
    "template-engine",
    "text-processing",
    "value-formatting",
    "encoding",
]
publish = true

[features]
default = ["all", "cli", "std"]
all = ["tracing"]
cli = ["asimov-module/cli", "pretty", "std"]
std = ["asimov-module/std", "minijinja/std_collections", "serde/std"]
tracing = ["asimov-module/tracing"]
unstable = []

pretty = ["dep:colored_json"]

[dependencies]
asimov-module = { version = "25.0.0-dev.9", default-features = false }
colored_json = { version = "5", default-features = false, optional = true }
minijinja = { version = "2.10", default-features = false, features = [
    "loader",
    "serde",
] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-jinja-runner"
path = "src/runner/main.rs"
required-features = ["cli"]
